Add initial server

--- a/package.json
+++ b/package.json
@@ -11,6 +11,5 @@
   "bugs": {
     "url": "https://github.com/max-severin/todo-mern/issues"
   },
-  "homepage": "https://github.com/max-severin/todo-mern#readme",
-  "dependencies": {}
+  "homepage": "https://github.com/max-severin/todo-mern#readme"
 }
