--- a/server/package.json
+++ b/server/package.json
@@ -17,5 +17,10 @@
     "express": "^4.17.1",
     "mongoose": "^5.12.10",
     "nodemon": "^2.0.7"
+  },
+  "devDependencies": {
+    "eslint": "^7.27.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4"
   }
 }
